k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment
  namespace: chat-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      name: backend-pod
      labels:
        app: backend

    spec:
      containers:
        - name: chatapp-backend
          image: akshita82/chatapp-backend

          ports:
            - containerPort: 5001
