k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  namespace: chat-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      name: frontend-pod
      labels:
        app: frontend

    spec:
      containers:
        - name: chatapp-frontend
          image: akshita82/chatapp-frontend

          ports:
            - containerPort: 80
