k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: chatapp-ingress
  namespace: chat-app

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
    - host: chat-app.com

      http:
        paths:
          - path: /api
            pathType: Prefix

            backend:
              service:
                name: backend

                port:
                  number: 5001
